WebVR: avoid race conditions for partially-initialized display

The GvrNonPresentingDelegate was acting as a pseudo VRDisplay device and
reporting successful requestPresent even though vital information such
as render resolution is not available yet.

Instead of the "fallback" 2048x1024 resolution, report a 0x0 resolution
so that other code can recognize this as an invalid device and defer
actions such as resizing.

One specific issue was that a vrpresentchange was getting fired prematurely,
leading to wrong canvas sizing by the JS application.

BUG=667327

Review-Url: https://codereview.chromium.org/2544713002
Cr-Commit-Position: refs/heads/master@{#435824}

Former-commit-id: 772bdaaac52114f3ebbc7626a3c630a3918b03d0